@@ -2490,9 +2490,9 @@ defun XLIB:DISPLAY-PROTOCOL-VERSION (1) // OK
  }
 
 defun XLIB:DISPLAY-RESOURCE-ID-BASE (1)
-{UNDEFINED} /* ??? */
+{UNDEFINED;} /* ??? */
 defun XLIB:DISPLAY-RESOURCE-ID-MASK (1)
-{UNDEFINED} /* ??? */
+{UNDEFINED;} /* ??? */
 
 defun XLIB:DISPLAY-ROOTS (1) // OK
 {
@@ -2540,7 +2540,7 @@ defun XLIB:DISPLAY-XID (1)
       * so have a closer look at (from Xlib.h):
       *	#define XAllocID(dpy) ((*((_XPrivDisplay)dpy)->resource_alloc)((dpy)))
       */
-     {UNDEFINED}
+     {UNDEFINED;}
 
 defun XLIB:DISPLAY-AFTER-FUNCTION (1) // OK
 {
@@ -2713,7 +2713,7 @@ defun XLIB:DISPLAY-TRACE (0, 0, rest, nokey, 0, NIL)
      //   - traceing seems not to be possible using the libX11
      //   - It may even not be wanted by anybody...?!
      // BTW in the source of MIT-CLX (trace.lisp) I found a mark that display-trace is an obsolete name.
-     {UNDEFINED}
+     {UNDEFINED;}
 
 
 // ----------------------------------------------------------------------------
@@ -4787,7 +4787,7 @@ void general_draw_text (int image_p)
   int x = get_sint16 (STACK_7);
   int y = get_sint16 (STACK_6);
   int len = vector_length (STACK_5);
-  if (!simple_string_p(STACK_5)) { NOTIMPLEMENTED }
+  if (!simple_string_p(STACK_5)) { NOTIMPLEMENTED; }
 
 #ifdef UNICODE
   {
@@ -4843,7 +4843,7 @@ defun XLIB:DRAW-GLYPHS (5, 0, norest, key, 5,
 }
 
 defun XLIB:DRAW-IMAGE-GLYPH (5, 0, norest, key, 3, (:TRANSLATE :WIDTH :SIZE))
-{UNDEFINED}
+{UNDEFINED;}
 //
 //  XLIB:DRAW-IMAGE-GLPYHS drawable gcontext x y sequence &key (:start 0) :end
 //                         (:translate #'translate-default) :width (:size :default)
@@ -4912,7 +4912,7 @@ defun XLIB:DRAW-IMAGE-GLYPHS (5, 0, norest, key, 5,
    */
 
 defun XLIB:TRANSLATE-DEFAULT (6) //NIM
-{UNDEFINED}
+{UNDEFINED;}
 
 // Together with the above function go the two below listed functions:
 //  (Which are indeed trivial, since we are on an ASCII system).
@@ -7548,7 +7548,7 @@ local void encode_event (uintC n, object event_key, Display *dpy, XEvent *ev)
 //
 defun XLIB:QUEUE-EVENT (0, 0, rest, nokey, 0, NIL)
 //defun XLIB:QUEUE-EVENT (2, 0, rest, key_allow, 2, (:APPEND-P :SEND-EVENT-P))
-{UNDEFINED}
+{UNDEFINED;}
 /* Take a look at XPutBackEvent, but that functions seems only to
  * put events on the head of the queue!
  * Maybe we should go and build our own event queque?
@@ -8448,7 +8448,7 @@ defun XLIB:BELL (1, 1)
 defun XLIB:CHANGE-KEYBOARD-CONTROL (1, 0, norest, key, 8,
 				    (:KEY-CLICK-PERCENT :BELL-PERCENT :BELL-PITCH :BELL-DURATION :LED :LED-MODE
 				     :KEY :AUTO-REPEAT-MODE))
-{UNDEFINED}
+{UNDEFINED;}
 
 defun XLIB:KEYBOARD-CONTROL (1)
 {
@@ -8549,15 +8549,15 @@ defun XLIB:QUERY-KEYMAP (1, 1)
 }
 
 defun XLIB:SET-MODIFIER-MAPPING (1, 0, norest, key, 8, (:SHIFT :LOCK :CONTROL :MOD1 :MOD2 :MOD3 :MOD4 :MOD5))
-{UNDEFINED}
+{UNDEFINED;}
 
 /* 14.4  Keyboard Encodings */
 defun XLIB:CHANGE-KEYBOARD-MAPPING (2, 0, norest, key, 3, (:START :END :FIRST-KEYCODE))
-{UNDEFINED}
+{UNDEFINED;}
 
 defun XLIB:KEYBOARD-MAPPING (1, 0, norest, key, 4, (:FIRST-KEYCODE :START :END :DATA))
 {
-  UNDEFINED
+  UNDEFINED;
     //  XGetKeyboardMapping
 }
 
@@ -8663,11 +8663,11 @@ defun XLIB:KEYSYM->CHARACTER (2, 1)
 
 defun XLIB:KEYSYM->KEYCODES (2) //NIM
 {
-  UNDEFINED
+  UNDEFINED;
 }
 
 // And there also the undocumented function:
-// defun XLIB:KEYCODE->CHARACTER (3, 0, norest, key, 2, (:KEYSYM-INDEX :KEYSYM-INDEX-FUNCTION)) {UNDEFINED}
+// defun XLIB:KEYCODE->CHARACTER (3, 0, norest, key, 2, (:KEYSYM-INDEX :KEYSYM-INDEX-FUNCTION)) {UNDEFINED;}
 
 /* 14.5  Client Termination */
 defun XLIB:ADD-TO-SAVE-SET (1)
@@ -8774,11 +8774,11 @@ defun XLIB:ACCESS-CONTROL-SETTER (2)
 
 // Maybe I drop code from xhost(1) in here ...
 defun XLIB:ACCESS-HOSTS (1, 1)
-{UNDEFINED}
+{UNDEFINED;}
 defun XLIB:ADD-ACCESS-HOST (2, 1)
-{UNDEFINED}
+{UNDEFINED;}
 defun XLIB:REMOVE-ACCESS-HOST (2, 1)
-{UNDEFINED}
+{UNDEFINED;}
 
 /* 14.7  Screen Saver */
 defun XLIB:ACTIVATE-SCREEN-SAVER (1)
@@ -9228,7 +9228,7 @@ defun XLIB:SHAPE-OFFSET (4)
 //      w-bounding, h-bounding, w-clip, h-clip
 
 defun XLIB:SHAPE-EXTENTS (1)
-{UNDEFINED}
+{UNDEFINED;}
 
 //
 //  XLIB:SHAPE-RECTANGLES window kind
@@ -9236,7 +9236,7 @@ defun XLIB:SHAPE-EXTENTS (1)
 //    -> rectangles - (rep-seq (sint16 sint16 sint16 sint16))
 //       ordering   - (member :unsorted :y-sorted :yx-sorted :yx-banded)
 defun XLIB:SHAPE-RECTANGLES (2)
-{UNDEFINED}
+{UNDEFINED;}
 ##endif
 
 
@@ -9290,94 +9290,94 @@ defun XLIB:DEFAULT-KEYSYM-INDEX (3)
 
 ##if 0
 // ???
-defun XLIB:DESCRIBE-ERROR (2) {UNDEFINED}
-defun XLIB:DESCRIBE-EVENT (3, 1) {UNDEFINED}
-defun XLIB:DESCRIBE-REPLY (2) {UNDEFINED}
-defun XLIB:DESCRIBE-REQUEST (2) {UNDEFINED}
-defun XLIB:DESCRIBE-TRACE (1, 1) {UNDEFINED}
-defun XLIB:EVENT-HANDLER (2) {UNDEFINED}
-defun XLIB:GET-EXTERNAL-EVENT-CODE (2) {UNDEFINED}
-defun XLIB:MAKE-EVENT-HANDLERS (0, 0, norest, key, 2, (:TYPE :DEFAULT)) {UNDEFINED}
-defun XLIB:DECODE-CORE-ERROR (2, 1) {UNDEFINED}
+defun XLIB:DESCRIBE-ERROR (2) {UNDEFINED;}
+defun XLIB:DESCRIBE-EVENT (3, 1) {UNDEFINED;}
+defun XLIB:DESCRIBE-REPLY (2) {UNDEFINED;}
+defun XLIB:DESCRIBE-REQUEST (2) {UNDEFINED;}
+defun XLIB:DESCRIBE-TRACE (1, 1) {UNDEFINED;}
+defun XLIB:EVENT-HANDLER (2) {UNDEFINED;}
+defun XLIB:GET-EXTERNAL-EVENT-CODE (2) {UNDEFINED;}
+defun XLIB:MAKE-EVENT-HANDLERS (0, 0, norest, key, 2, (:TYPE :DEFAULT)) {UNDEFINED;}
+defun XLIB:DECODE-CORE-ERROR (2, 1) {UNDEFINED;}
 
 // Digging with resources
-defun XLIB:ROOT-RESOURCES (1, 0, norest, key, 4, (:DATABASE :KEY :TEST :TEST-NOT)) {UNDEFINED}
-defun XLIB:RESOURCE-DATABASE-TIMESTAMP (1) {UNDEFINED}
-defun XLIB:RESOURCE-KEY (1) {UNDEFINED}
+defun XLIB:ROOT-RESOURCES (1, 0, norest, key, 4, (:DATABASE :KEY :TEST :TEST-NOT)) {UNDEFINED;}
+defun XLIB:RESOURCE-DATABASE-TIMESTAMP (1) {UNDEFINED;}
+defun XLIB:RESOURCE-KEY (1) {UNDEFINED;}
 
 // This is actually specified and will be implemented in Lisp
 defun XLIB:DEFAULT-ERROR-HANDLER (2, 0, rest, key_allow, 1, (:ASYNCHRONOUS))
 
 // These seem to handle keysym translations
-defun XLIB:KEYSYM-IN-MAP-P (3) {UNDEFINED}
-defun XLIB:KEYSYM-SET (1) {UNDEFINED}
-defun XLIB:CHARACTER->KEYSYMS (1, 1) {UNDEFINED}
-defun XLIB:CHARACTER-IN-MAP-P (3) {UNDEFINED}
-defun XLIB:DEFAULT-KEYSYM-TRANSLATE (3) {UNDEFINED}
-defun XLIB:DEFINE-KEYSYM (2, 0, norest, key, 5, (:LOWERCASE :TRANSLATE :MODIFIERS :MASK :DISPLAY)) {UNDEFINED}
-defun XLIB:DEFINE-KEYSYM-SET (3) {UNDEFINED}
-defun XLIB:MAPPING-NOTIFY (4) {UNDEFINED}
+defun XLIB:KEYSYM-IN-MAP-P (3) {UNDEFINED;}
+defun XLIB:KEYSYM-SET (1) {UNDEFINED;}
+defun XLIB:CHARACTER->KEYSYMS (1, 1) {UNDEFINED;}
+defun XLIB:CHARACTER-IN-MAP-P (3) {UNDEFINED;}
+defun XLIB:DEFAULT-KEYSYM-TRANSLATE (3) {UNDEFINED;}
+defun XLIB:DEFINE-KEYSYM (2, 0, norest, key, 5, (:LOWERCASE :TRANSLATE :MODIFIERS :MASK :DISPLAY)) {UNDEFINED;}
+defun XLIB:DEFINE-KEYSYM-SET (3) {UNDEFINED;}
+defun XLIB:MAPPING-NOTIFY (4) {UNDEFINED;}
 defun XLIB:UNDEFINE-KEYSYM (2, 0, norest, key_allow, 2, (:DISPLAY :MODIFIERS))
 
 // These seem to be some tracing feature
-defun XLIB:UNTRACE-DISPLAY (1) {UNDEFINED}
-defun XLIB:SUSPEND-DISPLAY-TRACING (1) {UNDEFINED}
-defun XLIB:RESUME-DISPLAY-TRACING (1) {UNDEFINED}
-defun XLIB:SHOW-TRACE (1, 0, norest, key, 2, (:LENGTH :SHOW-PROCESS)) {UNDEFINED}
-defun XLIB:TRACE-DISPLAY (1) {UNDEFINED}
+defun XLIB:UNTRACE-DISPLAY (1) {UNDEFINED;}
+defun XLIB:SUSPEND-DISPLAY-TRACING (1) {UNDEFINED;}
+defun XLIB:RESUME-DISPLAY-TRACING (1) {UNDEFINED;}
+defun XLIB:SHOW-TRACE (1, 0, norest, key, 2, (:LENGTH :SHOW-PROCESS)) {UNDEFINED;}
+defun XLIB:TRACE-DISPLAY (1) {UNDEFINED;}
 
 //  Somewhat bogus ...
-defun XLIB:SET-WM-RESOURCES (2, 0, norest, key, 3, (:WRITE :TEST :TEST-NOT)) {UNDEFINED}
-defun XLIB:NO-OPERATION (1) {UNDEFINED}
+defun XLIB:SET-WM-RESOURCES (2, 0, norest, key, 3, (:WRITE :TEST :TEST-NOT)) {UNDEFINED;}
+defun XLIB:NO-OPERATION (1) {UNDEFINED;}
 
 // [ MOVED TO LISP
 ##if 0
 // All these are defined in manager.lisp and are simply droped in ...
-defun XLIB:ICON-SIZES (1) {UNDEFINED}
-defun XLIB:SET-WM-CLASS (3) {UNDEFINED}
-defun XLIB:SET-WM-PROPERTIES (0, 0, rest, nokey, 0, NIL) {UNDEFINED}//LISPFUN  (xlib_set_wm_properties, 1, 0, rest, key, 36, (:NAME :ICON-NAME :RESOURCE-NAME :RESOURCE-CLASS :COMMAND :CLIENT-MACHINE :HINTS :NORMAL-HINTS :ZOOM-HINTS :USER-SPECIFIED-POSITION-P :USER-SPECIFIED-SIZE-P :PROGRAM-SPECIFIED-POSITION-P :PROGRAM-SPECIFIED-SIZE-P :X :Y :WIDTH :HEIGHT :MIN-WIDTH :MIN-HEIGHT :MAX-WIDTH :MAX-HEIGHT :WIDTH-INC :HEIGHT-INC :MIN-ASPECT :MAX-ASPECT :BASE-WIDTH :BASE-HEIGHT :WIN-GRAVITY :INPUT :INITIAL-STATE :ICON-PIXMAP :ICON-WINDOW :ICON-X :ICON-Y :ICON-MASK :WINDOW-GROUP))
-defun XLIB:MAKE-WM-HINTS (0, 0, norest, key, 9, (:INPUT :INITIAL-STATE :ICON-PIXMAP :ICON-WINDOW :ICON-X :ICON-Y :ICON-MASK :WINDOW-GROUP :FLAGS)) {UNDEFINED}
-defun XLIB:MAKE-WM-SIZE-HINTS (0, 0, norest, key, 19, (:USER-SPECIFIED-POSITION-P :USER-SPECIFIED-SIZE-P :X :Y :WIDTH :HEIGHT :MIN-WIDTH :MIN-HEIGHT :MAX-WIDTH :MAX-HEIGHT :WIDTH-INC :HEIGHT-INC :MIN-ASPECT :MAX-ASPECT :BASE-WIDTH :BASE-HEIGHT :WIN-GRAVITY :PROGRAM-SPECIFIED-POSITION-P :PROGRAM-SPECIFIED-SIZE-P)) {UNDEFINED}
-defun XLIB:GET-WM-CLASS (1) {UNDEFINED}
-defun XLIB:TRANSIENT-FOR (1) {UNDEFINED}
-defun XLIB:WM-CLIENT-MACHINE (1) {UNDEFINED}
-defun XLIB:WM-COLORMAP-WINDOWS (1) {UNDEFINED}
-defun XLIB:WM-COMMAND (1) {UNDEFINED}
-defun XLIB:WM-HINTS (1) {UNDEFINED}
-defun XLIB:WM-HINTS-FLAGS (1) {UNDEFINED}
-defun XLIB:WM-HINTS-ICON-MASK (1) {UNDEFINED}
-defun XLIB:WM-HINTS-ICON-PIXMAP (1) {UNDEFINED}
-defun XLIB:WM-HINTS-ICON-WINDOW (1) {UNDEFINED}
-defun XLIB:WM-HINTS-ICON-X (1) {UNDEFINED}
-defun XLIB:WM-HINTS-ICON-Y (1) {UNDEFINED}
-defun XLIB:WM-HINTS-INITIAL-STATE (1) {UNDEFINED}
-defun XLIB:WM-HINTS-INPUT (1) {UNDEFINED}
-defun XLIB:WM-HINTS-P (1) {UNDEFINED}
-defun XLIB:WM-HINTS-WINDOW-GROUP (1) {UNDEFINED}
-defun XLIB:WM-ICON-NAME (1) {UNDEFINED}
-defun XLIB:WM-NORMAL-HINTS (1) {UNDEFINED}
-defun XLIB:WM-PROTOCOLS (1) {UNDEFINED}
-defun XLIB:WM-RESOURCES (2, 0, norest, key, 3, (:KEY :TEST :TEST-NOT)) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-BASE-HEIGHT (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-BASE-WIDTH (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-HEIGHT (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-HEIGHT-INC (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-MAX-ASPECT (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-MAX-HEIGHT (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-MAX-WIDTH (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-MIN-ASPECT (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-MIN-HEIGHT (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-MIN-WIDTH (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-P (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-USER-SPECIFIED-POSITION-P (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-USER-SPECIFIED-SIZE-P (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-WIDTH (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-WIDTH-INC (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-WIN-GRAVITY (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-X (1) {UNDEFINED}
-defun XLIB:WM-SIZE-HINTS-Y (1) {UNDEFINED}
-defun XLIB:RGB-COLORMAPS (2) {UNDEFINED}
-defun XLIB:WM-NAME (1) {UNDEFINED}
+defun XLIB:ICON-SIZES (1) {UNDEFINED;}
+defun XLIB:SET-WM-CLASS (3) {UNDEFINED;}
+defun XLIB:SET-WM-PROPERTIES (0, 0, rest, nokey, 0, NIL) {UNDEFINED;}//LISPFUN  (xlib_set_wm_properties, 1, 0, rest, key, 36, (:NAME :ICON-NAME :RESOURCE-NAME :RESOURCE-CLASS :COMMAND :CLIENT-MACHINE :HINTS :NORMAL-HINTS :ZOOM-HINTS :USER-SPECIFIED-POSITION-P :USER-SPECIFIED-SIZE-P :PROGRAM-SPECIFIED-POSITION-P :PROGRAM-SPECIFIED-SIZE-P :X :Y :WIDTH :HEIGHT :MIN-WIDTH :MIN-HEIGHT :MAX-WIDTH :MAX-HEIGHT :WIDTH-INC :HEIGHT-INC :MIN-ASPECT :MAX-ASPECT :BASE-WIDTH :BASE-HEIGHT :WIN-GRAVITY :INPUT :INITIAL-STATE :ICON-PIXMAP :ICON-WINDOW :ICON-X :ICON-Y :ICON-MASK :WINDOW-GROUP))
+defun XLIB:MAKE-WM-HINTS (0, 0, norest, key, 9, (:INPUT :INITIAL-STATE :ICON-PIXMAP :ICON-WINDOW :ICON-X :ICON-Y :ICON-MASK :WINDOW-GROUP :FLAGS)) {UNDEFINED;}
+defun XLIB:MAKE-WM-SIZE-HINTS (0, 0, norest, key, 19, (:USER-SPECIFIED-POSITION-P :USER-SPECIFIED-SIZE-P :X :Y :WIDTH :HEIGHT :MIN-WIDTH :MIN-HEIGHT :MAX-WIDTH :MAX-HEIGHT :WIDTH-INC :HEIGHT-INC :MIN-ASPECT :MAX-ASPECT :BASE-WIDTH :BASE-HEIGHT :WIN-GRAVITY :PROGRAM-SPECIFIED-POSITION-P :PROGRAM-SPECIFIED-SIZE-P)) {UNDEFINED;}
+defun XLIB:GET-WM-CLASS (1) {UNDEFINED;}
+defun XLIB:TRANSIENT-FOR (1) {UNDEFINED;}
+defun XLIB:WM-CLIENT-MACHINE (1) {UNDEFINED;}
+defun XLIB:WM-COLORMAP-WINDOWS (1) {UNDEFINED;}
+defun XLIB:WM-COMMAND (1) {UNDEFINED;}
+defun XLIB:WM-HINTS (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-FLAGS (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-ICON-MASK (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-ICON-PIXMAP (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-ICON-WINDOW (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-ICON-X (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-ICON-Y (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-INITIAL-STATE (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-INPUT (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-P (1) {UNDEFINED;}
+defun XLIB:WM-HINTS-WINDOW-GROUP (1) {UNDEFINED;}
+defun XLIB:WM-ICON-NAME (1) {UNDEFINED;}
+defun XLIB:WM-NORMAL-HINTS (1) {UNDEFINED;}
+defun XLIB:WM-PROTOCOLS (1) {UNDEFINED;}
+defun XLIB:WM-RESOURCES (2, 0, norest, key, 3, (:KEY :TEST :TEST-NOT)) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-BASE-HEIGHT (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-BASE-WIDTH (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-HEIGHT (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-HEIGHT-INC (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-MAX-ASPECT (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-MAX-HEIGHT (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-MAX-WIDTH (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-MIN-ASPECT (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-MIN-HEIGHT (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-MIN-WIDTH (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-P (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-USER-SPECIFIED-POSITION-P (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-USER-SPECIFIED-SIZE-P (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-WIDTH (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-WIDTH-INC (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-WIN-GRAVITY (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-X (1) {UNDEFINED;}
+defun XLIB:WM-SIZE-HINTS-Y (1) {UNDEFINED;}
+defun XLIB:RGB-COLORMAPS (2) {UNDEFINED;}
+defun XLIB:WM-NAME (1) {UNDEFINED;}
 // ... and properly some more ...
 
 // These are simply defstruct generated functions -- moved to Lisp
@@ -9393,18 +9393,18 @@ defun XLIB:VISUAL-INFO-PLIST (1)
 defun XLIB:VISUAL-INFO-RED-MASK (1)
 
 // These here are defined in Lisp:
-defun XLIB:CUT-BUFFER (1, 0, norest, key, 6, (:BUFFER :TYPE :RESULT-TYPE :TRANSFORM :START :END)) {UNDEFINED}
-defun XLIB:ROTATE-CUT-BUFFERS (1, 2) {UNDEFINED}
+defun XLIB:CUT-BUFFER (1, 0, norest, key, 6, (:BUFFER :TYPE :RESULT-TYPE :TRANSFORM :START :END)) {UNDEFINED;}
+defun XLIB:ROTATE-CUT-BUFFERS (1, 2) {UNDEFINED;}
 defun xlib:bitmap-image (0, 1, rest)
 ##endif
 // ]
 
 // [ CONSIDERED OBSOLETE
 ##if 0
-defun XLIB:WM-ZOOM-HINTS (1) {UNDEFINED}
-defun XLIB:SET-STANDARD-PROPERTIES (1, 0, rest, nokey, 0, NIL) {UNDEFINED}
-defun XLIB:GET-STANDARD-COLORMAP (2) {UNDEFINED}
-defun XLIB:SET-STANDARD-COLORMAP (6) {UNDEFINED}
+defun XLIB:WM-ZOOM-HINTS (1) {UNDEFINED;}
+defun XLIB:SET-STANDARD-PROPERTIES (1, 0, rest, nokey, 0, NIL) {UNDEFINED;}
+defun XLIB:GET-STANDARD-COLORMAP (2) {UNDEFINED;}
+defun XLIB:SET-STANDARD-COLORMAP (6) {UNDEFINED;}
 ##endif
 // ]
 ##endif
