@@ -6,6 +6,8 @@
 	(ioctl-set, ioctl-get, ioctl): 3 forms of ioctl()
 	* bindings/linuxlibc6/wrap.lisp (check-res): new macro
 	(real-path, get-host-name, get-domain-name): use it
+	* modules/clx/new-clx/clx.f: NOTREACHED and thus NOTIMPLEMENTED
+	and UNDEFINED require a semicolon
 
 2002-03-03  Sam Steingold  <sds@gnu.org>
 
@@ -97,7 +99,7 @@
 
 2002-02-28   Barry Fishman  <bfishman@users.sf.net>
 
-	* clx.f (CONVERT-SELECTION): clean up the stack
+	* modules/clx/new-clx/clx.f (CONVERT-SELECTION): clean up the stack
 	(SELECTION-NOTIFY): added window notification
 
 2002-02-28  Sam Steingold  <sds@gnu.org>
